ส่งแจ้งเตือนพร้อม Data & เพิ่มประวัติการแจ้งเตือน
